# smard-utils

./: .gitmodules  LICENSE  Meine_Erkenntnisse.md  README.md  THIRD_PARTY_LICENSES  battery_model.py  battery_simulation.py  biobatsys.py  claude_findings_and_resouces.md  claude_results_commented.md  eeg_2023-flexibilisierung.md  pyproject.toml  senec_analyes.py  setup.py  smard_analyse.py  solbatsys.py
.github/workflows/: python-app.yml  smard_utils.yml  smartutils.yml
costs/: 2020-hour-price.csv  2024-hour-price.csv
data/sma_data_2024/: sma_2024_komplett.csv  sma_woche_01_20240101_20240107.csv  sma_woche_02_20240108_20240114.csv  sma_woche_03_20240115_20240121.csv  sma_woche_04_20240122_20240128.csv  sma_woche_05_20240129_20240204.csv  sma_woche_06_20240205_20240211.csv  sma_woche_07_20240212_20240218.csv  sma_woche_08_20240219_20240225.csv  sma_woche_09_20240226_20240303.csv  (+44 more)
doc/: REQUIREMENTS.md
docs/: _config.yml  biobatsys.html  community.html  index.html  solbatsys.html  strategies.html  webapp.html
docs/_includes/: footer.html  (+1 more)
smard_utils/: battery_model.py  battery_simulation.py  battery_simulation_old.py  biobatsys.py  biobatsys_new.py  community.py  european_grid_analysis.py  senec_analyes.py  simple_bms.py  smard_analyse.py  smard_downloader.py  smard_downloader_quaterly.py  solbatsys.py  solbatsys_new.py
tests/: test_core_analytics.py  test_core_battery.py  test_core_bms.py  test_day_ahead_strategy.py  test_drivers.py  test_integration.py  test_smard_basic.py  test_strategies.py  test_x.py
webapp/: app.py  requirements.txt  uwsgi.ini  wsgi.py
(+35 files in other folders)
